# sgp

./: .gitignore  GUIA_INSTALACION.md  README.md  __init__.py  app.py  diagnostico_supabase.py  guia_instalacion_final.md  iniciar.bat  models.py  pyproject.toml  requirements.txt  supabase_config.md  sync_manager.py  utils.py  utils_constancias.py
components/: selectores.py  validadores.py
database/: local.py  remote.py
modules/actas/: crud_actas.py
modules/asistencia/: crud_asistencia.py
modules/clero/: crud_presbiteros.py
modules/constancias/: crud_constancias.py
modules/educacion/: crud_actividades.py  crud_cursos.py  crud_sesiones.py
modules/espacios/: crud_salones.py
modules/feligreses/: crud_catecumenos.py  crud_personas.py
modules/finanzas/: crud_finanzas.py
modules/geografia/: crud_geografia.py
modules/grupos/: crud_cursos_catequesis.py  crud_grupo_parroquial.py
modules/inventario/: crud_inventario.py
modules/personas/: crud_contacto.py  crud_personas.py
modules/sacramentos/: crud_sacramentos.py
modules/sistema/: crud_usuarios.py
scripts/: cleanup.py  init_datos_constancias.py  init_sistema_completo.py
